Minor sizing adjustments made to nav to fix the vertical alignment.

--- a/src/main.css
+++ b/src/main.css
@@ -11,7 +11,7 @@ body {
     display: grid;
     place-items:center; 
     height: 100vh;
-    grid-template-rows: 60px 1fr;
+    grid-template-rows: 70px 1fr;
     grid-template-columns: 200px 1fr;
     background-color: rgb(34, 33, 33);
 }
@@ -23,7 +23,6 @@ nav {
     grid-column: 1/3;
     background-color: black;
     width: 100%;
-    height: 60px;
     align-items: center;
     padding-left: 20px;
     grid-template-columns: 200px  1fr 200px;
@@ -33,6 +32,7 @@ nav {
     position: relative;
     width: auto;
     height: 65px;
+    top: 7px; 
 }
 
 h1 {
@@ -53,8 +53,9 @@ h1 {
 
 .newTodoButton {
     display: grid;
-    width: 25px;
-    height: 25px;
+    align-content:center;
+    width: 30px;
+    height: 30px;
     color: aqua;
     border: aqua 2px solid;
     background-color: black;
@@ -62,8 +63,9 @@ h1 {
 }
 
 .userIcon {
-    height: 40px;
-    width: 40px;
+    align-self: center;
+    height: 50px;
+    width: 50px;
     border-radius: 50%;
     border: solid aqua 2px;
 }
